<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.mda.tba.swissknife.FragmentHowItWorks">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/aboutName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/aboutName"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/aboutMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutName"
                android:layout_margin="6dp"
                android:text="@string/aboutMain"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/aboutEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutMain"
                android:layout_centerHorizontal="true"
                android:layout_margin="6dp"
                android:text="@string/aboutEmail"
                android:textAppearance="?android:attr/textAppearance" />

            <TextView
                android:id="@+id/aboutVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutEmail"
                android:layout_centerHorizontal="true"
                android:text="@string/aboutVersion"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/aboutCopyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutVersion"
                android:layout_centerHorizontal="true"
                android:text="@string/aboutCopyright"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>

    </ScrollView>